Add basic html structure

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Rock Paper Scissors Spock Lizard online">
+    <meta name="keywords" content="Rock Paper Scissors Lizard Spock, Rock Paper Scissors, Hand game, Online game, Game of chance">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+    <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
+    <header></header>
+    <div></div>
+    <div></div>
+    <div></div>
+    <footer></footer>
+
+    <script src="https://kit.fontawesome.com/7a7647814f.js" crossorigin="anonymous"></script>
     <script src="/assets/js/script.js"></script>
+    <noscript>Sorry, Your browser does not support Javascript!</noscript>
+
 </body>
 </html>
