Add header in html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <title>Rock Paper Scissors Lizard Spock</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Rock Paper Scissors Spock Lizard</h1>
+        <p title="description">The game is an <em>extension</em> of the classic game of chance, <small>Rock Paper Scissors</small>, created by <strong>Sam Kass</strong> and <strong>Karen Bryla</strong>.</p>
+    </header>
     <div></div>
     <div></div>
     <div></div>
