Add footer in html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
     <div></div>
     <div></div>
     <div></div>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://en.wikipedia.org/wiki/Rock_paper_scissors" target="_blank" aria-label="Go to Rock Paper Scissors Wikipedia page (opens in new tab)">Rock Paper Scissors Wikipedia Page</a>
+            </li>
+            <wbr>
+            <li>
+                <a href="http://www.samkass.com/theories/RPSSL.html" target="_blank" aria-label="Go to Rock Paper Scissors Spock Lizard Official Page (opens in new tab)">Rock Paper Scissors Spock Lizard Official Page</a>
+            </li>
+        </ul>
+    </footer>
 
     <script src="https://kit.fontawesome.com/7a7647814f.js" crossorigin="anonymous"></script>
     <script src="/assets/js/script.js"></script>
