Add game area structure in html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
         <p title="description">The game is an <em>extension</em> of the classic game of chance, <small>Rock Paper Scissors</small>, created by <strong>Sam Kass</strong> and <strong>Karen Bryla</strong>.</p>
     </header>
     <div></div>
-    <div></div>
+    <div>
+        <h2>Play Game</h2>
+        <h3 id="result">Result </h3>
+        <span id="player">You </span>
+        <span id="computer">Computer </span>
+        <div id="button">
+            <button type="button" class="buttons">Rock</button>
+            <button type="button" class="buttons">Paper</button>
+            <button type="button" class="buttons">Scissors</button>
+            <button type="button" class="buttons">Spock</button>
+            <button type="button" class="buttons">Lizard</button>
+        </div>
+    </div>
     <div></div>
     <footer>
         <ul>
