Add table in html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,59 @@
             <button type="button" class="buttons">Lizard</button>
         </div>
     </div>
-    <div></div>
+    <div>
+        <table>
+            <caption>Possible outcomes of the game&darr;</caption>
+            <tr>
+                <th></th>
+                <th>Rock</th>
+                <th>Paper</th>
+                <th>Scissors</th>
+                <th>Spock</th>
+                <th>Lizard</th>
+            </tr>
+            <tr>
+                <th>Rock</th>
+                <td>&#129308;&#129307;</td>
+                <td>Paper</td>
+                <td>Rock</td>
+                <td>Spock</td>
+                <td>Rock</td>
+            </tr>
+            <tr>
+                <th>Paper</th>
+                <td>Paper</td>
+                <td>&#129308;&#129307;</td>
+                <td>Scissors</td>
+                <td>Paper</td>
+                <td>Lizard</td>
+            </tr>
+            <tr>
+                <th>Scissors</th>
+                <td>Rock</td>
+                <td>Scissors</td>
+                <td>&#129308;&#129307;</td>
+                <td>Spock</td>
+                <td>Scissors</td>
+            </tr>
+            <tr>
+                <th>Spock</th>
+                <td>Spock</td>
+                <td>Paper</td>
+                <td>Spock</td>
+                <td>&#129308;&#129307;</td>
+                <td>Lizard</td>
+            </tr>
+            <tr>
+                <th>Lizard</th>
+                <td>Rock</td>
+                <td>Lizard</td>
+                <td>Scissors</td>
+                <td>Lizard</td>
+                <td>&#129308;&#129307;</td>
+            </tr>
+          </table>
+    </div>
     <footer>
         <ul>
             <li>
