Add game rule structure in html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,28 @@
         <h1>Rock Paper Scissors Spock Lizard</h1>
         <p title="description">The game is an <em>extension</em> of the classic game of chance, <small>Rock Paper Scissors</small>, created by <strong>Sam Kass</strong> and <strong>Karen Bryla</strong>.</p>
     </header>
-    <div></div>
+    <div>
+        <details>
+            <summary>Rock</summary>
+            Crushes Lizard<br>Crushes Scissors
+        </details>
+        <details>
+            <summary>Paper</summary>
+            Covers Rock<br>Disproves Spock
+        </details>
+        <details>
+            <summary>Scissors</summary>
+            Cuts Paper<br>Decapitates Lizard
+        </details>
+        <details>
+            <summary>Spock</summary>
+            Smashes Scissors<br>Vaporizes Rock
+        </details>
+        <details>
+            <summary>Lizard</summary>
+            Eats Paper<br>Poisons Spock
+        </details>    
+    </div>
     <div>
         <h2>Play Game</h2>
         <h3 id="result">Result </h3>
