Add comments in html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
     <meta name="description" content="Rock Paper Scissors Spock Lizard online">
     <meta name="keywords" content="Rock Paper Scissors Lizard Spock, Rock Paper Scissors, Hand game, Online game, Game of chance">
+    <!-- css link -->
     <link rel="stylesheet" href="/assets/css/style.css">
+    <!-- favicon link -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <title>Rock Paper Scissors Lizard Spock</title>
@@ -17,6 +19,7 @@
         <h1>Rock Paper Scissors Spock Lizard</h1>
         <p title="description">The game is an <em>extension</em> of the classic game of chance, <small>Rock Paper Scissors</small>, created by <strong>Sam Kass</strong> and <strong>Karen Bryla</strong>.</p>
     </header>
+    <!-- Who beats whom definitions -->
     <div>
         <details>
             <summary>Rock</summary>
@@ -39,6 +42,7 @@
             Eats Paper<br>Poisons Spock
         </details>    
     </div>
+    <!-- Game area -->
     <div>
         <h2>Play Game</h2>
         <h3 id="result">Result </h3>
@@ -52,6 +56,7 @@
             <button type="button" class="buttons">Lizard</button>
         </div>
     </div>
+    <!-- Possible outcome of the game table -->
     <div>
         <table>
             <caption>Possible outcomes of the game&darr;</caption>
@@ -116,8 +121,9 @@
             </li>
         </ul>
     </footer>
-
+    <!-- Font awesome script -->
     <script src="https://kit.fontawesome.com/7a7647814f.js" crossorigin="anonymous"></script>
+    <!-- Javascript script -->
     <script src="/assets/js/script.js"></script>
     <noscript>Sorry, Your browser does not support Javascript!</noscript>
 
