Add javascript sctructure

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
     <!-- Game area -->
     <div>
         <h2>Play Game</h2>
-        <h3 id="result">Result </h3>
-        <span id="player">You </span>
-        <span id="computer">Computer </span>
+        <h3 id="resultText">Result </h3>
+        <span id="playerText">You </span>
+        <span id="computerText">Computer </span>
         <div id="button">
-            <button type="button" class="buttons">Rock</button>
-            <button type="button" class="buttons">Paper</button>
-            <button type="button" class="buttons">Scissors</button>
-            <button type="button" class="buttons">Spock</button>
-            <button type="button" class="buttons">Lizard</button>
+            <button type="button" class="buttons">ROCK</button>
+            <button type="button" class="buttons">PAPER</button>
+            <button type="button" class="buttons">SCISSORS</button>
+            <button type="button" class="buttons">SPOCK</button>
+            <button type="button" class="buttons">LIZARD</button>
         </div>
     </div>
     <!-- Possible outcome of the game table -->
